...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <ListView
        android:id="@+id/events_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="8dp"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Location"
        app:layout_constraintStart_toEndOf="@+id/timeButton"
        app:layout_constraintTop_toTopOf="@+id/timeButton" />
...
        android:layout_marginStart="8dp"
        android:text="History"
        app:layout_constraintStart_toEndOf="@+id/locationButton"
        app:layout_constraintTop_toTopOf="@+id/locationButton" />

    <Button
        android:id="@+id/clear_filters_button"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="272dp"
        android:text="Clear filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/party_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:contentDescription="@string/party"
                    android:src="@android:drawable/ic_menu_gallery" />

...
