...
            android:textAllCaps="true"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_image" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Event name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
...
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_price" />

        <Button
            android:id="@+id/join_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="Join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_interaction_label" />

        <TextView
            android:id="@+id/event_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Number of waiting"
            app:layout_constraintBaseline_toBaselineOf="@id/join_button"
            app:layout_constraintEnd_toStartOf="@+id/join_button" />
...
