...
            app:layout_constraintTop_toBottomOf="@id/event_details_pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EVENT NAME -->
        <TextView
            android:id="@+id/event_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Event Name"
            android:textColor="@color/black"
            android:textSize="28sp"
...
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- DESCRIPTION TEXT -->
        <TextView
            android:id="@+id/event_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Event description will appear here"
            android:textColor="@color/black"
            android:textSize="16sp"
...
            app:layout_constraintTop_toTopOf="@id/label_reg_close"
            app:layout_constraintStart_toEndOf="@id/label_reg_close"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- JOIN BUTTON -->
        <Button
            android:id="@+id/event_details_join_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="Join Waiting List"
            android:textSize="18sp"
...
